--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "discord.js": "discordjs/discord.js#master",
     "erlpack": "discord/erlpack",
     "log4js": "^6.3.0",
+    "python-shell": "^3.0.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
     "utf-8-validate": "^5.0.4",
@@ -43,7 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
