--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "watch": "tsc -b -w",
     "lint": "npx eslint . --ext ts --fix",
     "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
-    "test": "nodemon --config nodemon.json -r dotenv/config src/index.ts"
+    "test": "nodemon -r dotenv/config src/index.ts"
   },
   "dependencies": {
     "bufferutil": "^4.0.3",
@@ -36,11 +36,12 @@
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
     "utf-8-validate": "^5.0.4",
+    "vm2": "^3.9.3",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41",
-    "@types/ws": "^7.4.1",
+    "@types/node": "^15.0.1",
+    "@types/ws": "^7.4.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "dotenv": "^8.2.0",
