--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/ws": "^7.4.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "discord-api-types": "^0.18.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
