--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "erlpack": "discord/erlpack",
     "log4js": "^6.3.0",
     "python-shell": "^3.0.0",
+    "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
     "utf-8-validate": "^5.0.4",
     "vm2": "^3.9.3",
     "zlib-sync": "^0.1.7"
@@ -50,6 +50,6 @@
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.1.1"
+    "typescript": "^4.2.4"
   }
 }
