--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,30 @@
 {
-    "compileOnSave": true,
-    "compilerOptions": {
-        "allowSyntheticDefaultImports": true,
-        "alwaysStrict": true,
-        "declaration": true,
-        "declarationMap": true,
-        "esModuleInterop": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "lib": [
-            "ESNext",
-            "ESNext.AsyncIterable",
-            "ESNext.Array",
-            "ESNext.Intl",
-            "ESNext.Symbol"
-        ],
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "noEmitHelpers": true,
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "outDir": "dist",
-        "pretty": true,
-        "resolveJsonModule": true,
-        "sourceMap": true,
-        "strict": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "target": "ESNext"
-    },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "compileOnSave": true,
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "lib": [
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "ESNext.Array",
+      "ESNext.Intl",
+      "ESNext.Symbol",
+      "ESNext.BigInt",
+      "ESNext.Promise",
+      "ESNext.String",
+    ],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmitHelpers": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "outDir": "dist",
+    "pretty": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "target": "ESNext"
+  }
 }
