--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,19 +4,28 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.md
+      - LICENSE
+      - nodemon.json
+      - .gitignore
+      - .eslintignore
+      - .eslintrc.json
+      - .editorconfig
+      - .github/**
 
 jobs:
   build:
     name: Build Docker
     runs-on: ubuntu-latest
+    env:
+      REPO: eve0415/devtool
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -28,18 +37,21 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: ${{ runner.os }}-buildx-
 
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          username: eve0415
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PAT }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: eve0415/devtool:latest
+          tags: |
+            ghcr.io/${{ env.REPO }}:latest
+            ghcr.io/${{ env.REPO }}:${{ github.sha }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
@@ -50,10 +62,11 @@ jobs:
     steps:
       - name: Rollout
         uses: appleboy/ssh-action@master
+        env:
+          IMAGE: ghcr.io/eve0415/devtool:${{ github.sha }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SECRET_KEY }}
-          script_stop: true
-          script: kubectl rollout restart deploy devtool
+          script: kubectl set image --record deployment/devtool devtool=$IMAGE
