--- a/kubernetes/devtool.yaml
+++ b/kubernetes/devtool.yaml
@@ -18,11 +18,18 @@ spec:
     spec:
       containers:
         - name: devtool
-          image: eve0415/devtool
+          image: ghcr.io/eve0415/devtool
           imagePullPolicy: Always
+          shareProcessNamespace: true
           securityContext:
             readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - NET_RAW
           resources:
+            limits:
+              memory: 256M
+              cpu: 500m
           env:
             - name: DISCORD_TOKEN
               valueFrom:
