--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord.js": "^13.1.0",
     "fastify": "^3.20.2",
     "log4js": "^6.3.0",
+    "prettier": "^2.3.2",
     "tree-kill": "^1.2.2",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.6.2",
+    "@types/prettier": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "dotenv": "^10.0.0",
