--- a/package.json
+++ b/package.json
@@ -21,29 +21,30 @@
     "test": "nodemon --config nodemon.json -r dotenv/config src/index.ts"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "bufferutil": "^4.0.3",
-    "discord.js": "^13.1.0",
-    "fastify": "^3.21.6",
+    "axios": "^0.23.0",
+    "bufferutil": "^4.0.5",
+    "discord.js": "^13.2.0",
+    "fastify": "^3.22.0",
     "log4js": "^6.3.0",
     "prettier": "^2.4.1",
     "tree-kill": "^1.2.2",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.3.0",
     "tslib": "^2.3.1",
-    "utf-8-validate": "^5.0.5",
-    "vm2": "^3.9.3",
+    "utf-8-validate": "^5.0.7",
+    "vm2": "^3.9.4",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^16.10.1",
-    "@types/prettier": "^2.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@types/node": "^16.11.0",
+    "@types/prettier": "^2.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint": "^8.0.1",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4",
+    "typescript-eslint-language-service": "^4.1.5"
   }
 }
