--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,6 @@
     "noImplicitAny": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
-    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -33,6 +32,7 @@
       }
     ],
     "removeComments": true,
+    "sourceMap": true,
     "strict": true,
     "target": "ESNext",
     "useDefineForClassFields": true
