--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": [
-      "./tsconfig.json"
-    ],
-    "ecmaVersion": 12
+    "project": "./tsconfig.json"
   },
   "plugins": [
     "import",
@@ -61,12 +58,17 @@
       "error",
       "index-signature"
     ],
+    "@typescript-eslint/consistent-type-assertions": "error",
+    "@typescript-eslint/consistent-type-exports": "error",
     "@typescript-eslint/consistent-type-imports": "error",
     "@typescript-eslint/consistent-type-definitions": [
       "error",
       "interface"
     ],
     "@typescript-eslint/dot-notation": "error",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error"
+    ],
     "@typescript-eslint/func-call-spacing": [
       "error",
       "never"
@@ -275,7 +277,7 @@
     "no-array-constructor": "error",
     "no-console": "off",
     "no-duplicate-imports": "off",
-    "no-empty-function": "error",
+    "no-empty-function": "off",
     "no-extra-semi": "error",
     "no-floating-decimal": "error",
     "no-implied-eval": "error",
