--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@types/node": "^17.0.8",
     "axios": "^0.24.0",
     "bufferutil": "^4.0.6",
     "discord.js": "^13.6.0",
@@ -29,18 +30,18 @@
     "tree-kill": "^1.2.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
+    "typescript": "^4.5.4",
     "utf-8-validate": "^5.0.8",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
     "@types/prettier": "^2.4.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.7.0",
+    "eslint": "8.6.0",
     "eslint-plugin-import": "^2.25.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.5.4",
     "typescript-eslint-language-service": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
