--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
     "url": "https://github.com/eve0415/DevTool/issues"
   },
   "main": "dist/index.js",
+  "packageManager": "yarn@3.2.0",
   "scripts": {
     "build": "tsc -b",
     "lint": "eslint --fix .",
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@types/node": "^17.0.10",
-    "axios": "^0.25.0",
+    "@types/node": "^17.0.21",
+    "axios": "^0.26.0",
     "bufferutil": "^4.0.6",
     "discord.js": "^13.6.0",
-    "fastify": "^3.27.0",
+    "fastify": "^3.27.2",
     "fuse.js": "^6.5.3",
-    "log4js": "^6.4.0",
+    "log4js": "^6.4.2",
     "prettier": "^2.5.1",
     "tree-kill": "^1.2.2",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "utf-8-validate": "^5.0.8",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/prettier": "^2.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "8.7.0",
+    "@types/prettier": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "8.10.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
     "rimraf": "^3.0.2",
     "typescript-eslint-language-service": "^5.0.0"
-  },
-  "packageManager": "yarn@3.1.1"
+  }
 }
