--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "devtoolbot",
-  "version": "1.0.0",
   "description": "Developer tool bot for Discord",
   "author": "eve0415 <40632436+eve0415@users.noreply.github.com>",
   "homepage": "https://github.com/eve0415/DevTool#readme",
@@ -12,12 +11,13 @@
   "bugs": {
     "url": "https://github.com/eve0415/DevTool/issues"
   },
-  "main": "dist/index.js",
+  "private": true,
+  "type": "module",
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "tsc -b",
+    "build": "./build.cjs && tsc",
     "lint": "eslint --fix .",
-    "clean": "rimraf dist"
+    "clean": "rimraf out"
   },
   "dependencies": {
     "@types/node": "^17.0.21",
@@ -29,7 +29,6 @@
     "log4js": "^6.4.2",
     "prettier": "^2.5.1",
     "tree-kill": "^1.2.2",
-    "tslib": "^2.3.1",
     "typescript": "^4.6.2",
     "utf-8-validate": "^5.0.9",
     "zlib-sync": "^0.1.7"
@@ -38,6 +37,8 @@
     "@types/prettier": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "esbuild": "^0.14.25",
+    "esbuild-node-externals": "^1.4.1",
     "eslint": "8.10.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
