--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,12 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
     "lib": [
       "ESNext"
     ],
-    "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
-    "noEmitHelpers": true,
+    "noEmit": true,
     "noImplicitAny": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
@@ -21,13 +20,12 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "dist",
     "removeComments": true,
+    "resolveJsonModule": true,
     "strict": true,
-    "target": "ESNext",
-    "resolveJsonModule": true
+    "target": "esnext"
   },
-  "include": [
-    "src"
+  "exclude": [
+    "out"
   ]
 }
