--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "type": "module",
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "./build.cjs && tsc",
+    "build": "./build.cjs",
+    "build:prod": "./build.cjs && tsc",
+    "dev": "nodemon --watch src -e ts --exec \"yarn build -inline-sourcemap && yarn node -r dotenv/config ./out/index.js\"",
     "lint": "eslint --fix .",
     "clean": "rimraf out"
   },
@@ -37,11 +39,13 @@
     "@types/prettier": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "dotenv": "^16.0.0",
     "esbuild": "^0.14.25",
     "esbuild-node-externals": "^1.4.1",
     "eslint": "8.10.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
+    "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0"
   }
